crates/dora-compiler/src/evm/snapshots/dora_compiler__evm__tests__program_from_eof_bytecode.snap
---
source: crates/dora-compiler/src/evm/tests.rs
expression: "format!(\"{:#?}\", program.operations())"
---
[
    Invalid,
    Stop,
    Add,
    Add,
    Stop,
    Div,
    Mul,
    Stop,
    Add,
    Add,
    Invalid,
    Div,
    Stop,
    Push(
        (
            14,
            39614106649111520884364936246,
        ),
    ),
    Lt,
    IsZero,
    RJumpI(
        3,
    ),
    Push0,
    Dup(
        1,
    ),
    Revert,
    Push0,
    CalldataLoad,
    Push(
        (
            1,
            224,
        ),
    ),
    Shr,
    Swap(
        1,
    ),
    Dup(
        2,
    ),
    Push(
        (
            4,
            1068876235,
        ),
    ),
    Eq,
    RJumpI(
        224,
    ),
    Dup(
        2,
    ),
    Push(
        (
            4,
            2206332298,
        ),
    ),
    Eq,
    RJumpI(
        156,
    ),
    Pop,
    Push(
        (
            4,
            3500007562,
        ),
    ),
    Eq,
    RJumpI(
        4,
    ),
    Push0,
    RJump(
        65493,
    ),
    CallValue,
    RJumpI(
        135,
    ),
    Push0,
    Push(
        (
            32,
            115792089237316195423570985008687907853269984665640564039457584007913129639932,
        ),
    ),
    CalldataSize,
    Add,
    Slt,
    RJumpI(
        92,
    ),
    Push0,
    SLoad,
    Push(
        (
            32,
            115792089237316195423570985008687907853269984665640564039457584007913129639935,
        ),
    ),
    Dup(
        2,
    ),
    Eq,
    RJumpI(
        8,
    ),
    Push(
        (
            1,
            1,
        ),
    ),
    Add,
    Push0,
    SStore,
    Push0,
    Dup(
        1,
    ),
    Return,
    Push(
        (
            32,
            35408467139433450592217433187231851964531694900788300625387963629091585785856,
        ),
    ),
    Push0,
    MStore,
    Push(
        (
            1,
            17,
        ),
    ),
    Push(
        (
            1,
            4,
        ),
    ),
    MStore,
    Push(
        (
            1,
            36,
        ),
    ),
    Push0,
    Revert,
    Push0,
    Dup(
        1,
    ),
    Revert,
    Push0,
    Dup(
        1,
    ),
    Revert,
    CallValue,
    RJumpI(
        51,
    ),
    Push0,
    Push(
        (
            32,
            115792089237316195423570985008687907853269984665640564039457584007913129639932,
        ),
    ),
    CalldataSize,
    Add,
    Slt,
    RJumpI(
        8,
    ),
    Push(
        (
            1,
            32,
        ),
    ),
    Swap(
        1,
    ),
    Push0,
    SLoad,
    Dup(
        2,
    ),
    MStore,
    Return,
    Push0,
    Dup(
        1,
    ),
    Revert,
    Push0,
    Dup(
        1,
    ),
    Revert,
    CallValue,
    RJumpI(
        52,
    ),
    Push(
        (
            1,
            32,
        ),
    ),
    Push(
        (
            32,
            115792089237316195423570985008687907853269984665640564039457584007913129639932,
        ),
    ),
    CalldataSize,
    Add,
    Slt,
    RJumpI(
        8,
    ),
    Push(
        (
            1,
            4,
        ),
    ),
    CalldataLoad,
    Push0,
    SStore,
    Push0,
    Dup(
        1,
    ),
    Return,
    Push0,
    Dup(
        1,
    ),
    Revert,
    Push0,
    Dup(
        1,
    ),
    Revert,
    Log(
        3,
    ),
    Push(
        (
            5,
            452857328472,
        ),
    ),
    Invalid,
    Slt,
    Keccak256,
    Invalid,
    Push(
        (
            6,
            124180288463900,
        ),
    ),
    AddMod,
    Invalid,
    Invalid,
    DataLoadN(
        50024,
    ),
    Lt,
    Invalid,
    Not,
    Swap(
        9,
    ),
    Push(
        (
            25,
            538184176245971035417613184971606660670382801480393742513249,
        ),
    ),
    Push(
        (
            13,
            19441987869628248385529493073458,
        ),
    ),
    CalldataCopy,
    Invalid,
    Push(
        (
            5,
            435778055279,
        ),
    ),
    Push(
        (
            17,
            15719700526656272437538673812025312635252,
        ),
    ),
    Invalid,
    Push(
        (
            5,
            228459099700,
        ),
    ),
    Address,
    CallValue,
    Invalid,
    Push(
        (
            14,
            1868824683,
        ),
    ),
]
